# claude-code-for-health

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
data/MEDEC/: MEDEC-MS-ValidationSet-with-GroundTruth-and-ErrorType.csv
data/MedCalcBench/: one_shot_data.csv
data/MedCaseReasoning/: extraction_errors.jsonl
data/reference/: diagnostic_criteria.json  drug_info.json  lab_ranges.json
server/: Dockerfile  __init__.py  app.py  claude_code_for_health_environment.py  command_parser.py  constants.py  data_loader.py  graders.py  requirements.txt  task_configs.py  ui.py
